--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,10 +20,9 @@
           <p><img src="img/cookie-48.png">
           You bake <span id="my-cpc">10.0</span> cookies per types.</p>
           <ul>
-            <li>1st: idhoge total cps</li>
-            <li>2nd: idfoo total cps</li>
-            <li>この辺にサーバーから送られてきた</li>
-            <li>全員のクッキー数とCPSを表示</li>
+            <li>1st: id total cps</li>
+            <li>2nd: id total cps</li>
+            <li>(*Display cookie number and CpS of Multiplayer)</li>
           </ul>
         </div>
         <div id="type-block">
@@ -37,6 +36,7 @@
           </div>
           <div class="bakeries">
             <div id="bakery-Cursor" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Pointer</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -44,6 +44,7 @@
               </div>
             </div>
             <div id="bakery-Grandma" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Grandma</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -51,6 +52,7 @@
               </div>
             </div>
             <div id="bakery-Farm" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Farm</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -58,11 +60,15 @@
               </div>
             </div>
             <div id="bakery-Factory" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Factory</div>
-              <img src="img/cookie-24.png">
-              <span class="bakery-price"></span>
+              <div>
+                <img src="img/cookie-24.png">
+                <span class="bakery-price"></span>
+              </div>
             </div>
             <div id="bakery-Mine" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Mine</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -70,6 +76,7 @@
               </div>
             </div>
             <div id="bakery-Shipment" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Shipment</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -77,6 +84,7 @@
               </div>
             </div>
             <div id="bakery-AlchemyLab" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">AlchemyLab</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -84,6 +92,7 @@
               </div>
             </div>
             <div id="bakery-Portal" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Portal</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -91,6 +100,7 @@
               </div>
             </div>
             <div id="bakery-TimeMachine" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Time Machine</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -98,6 +108,7 @@
               </div>
             </div>
             <div id="bakery-AntimatterCondenser" class="bakery-item">
+              <div class="amount">0</div>
               <div class="bakery-name">Antimatter Condenser</div>
               <div>
                 <img src="img/cookie-24.png">
@@ -112,54 +123,44 @@
           </div>
           <div class="bakeries">
             <div id="my-Cursor" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Grandma" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Farm" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Factory" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Mine" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Shipment" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-AlchemyLab" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-Portal" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-TimeMachine" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
             <div id="my-AntimatterCondenser" class="my-item">
-              <div>
-                <span class="bakery-sell">sell</span>
-              </div>
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
             </div>
           </div> <!--bakeries-->
         </div> <!--column-->
