--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,43 +122,43 @@
             <span>Me</span>
           </div>
           <div class="bakeries">
-            <div id="my-Cursor" class="my-item">
+            <div id="my-Cursor" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Grandma" class="my-item">
+            <div id="my-Grandma" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Farm" class="my-item">
+            <div id="my-Farm" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Factory" class="my-item">
+            <div id="my-Factory" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Mine" class="my-item">
+            <div id="my-Mine" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Shipment" class="my-item">
+            <div id="my-Shipment" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-AlchemyLab" class="my-item">
+            <div id="my-AlchemyLab" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-Portal" class="my-item">
+            <div id="my-Portal" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-TimeMachine" class="my-item">
+            <div id="my-TimeMachine" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
-            <div id="my-AntimatterCondenser" class="my-item">
+            <div id="my-AntimatterCondenser" class="item my-item">
               <div class="amount">0</div>
               <div class="bakery-sell">Sell 1</div>
             </div>
@@ -166,18 +166,144 @@
         </div> <!--column-->
         <div class="column">
           <div class="column-title">
-            <span>Player1</span>
+            <span id="player1-name">Player1</span>
           </div>
+          <div class="bakeries">
+            <div id="player1-Cursor" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Grandma" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Farm" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Factory" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Mine" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Shipment" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-AlchemyLab" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-Portal" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-TimeMachine" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player1-AntimatterCondenser" class="item player1-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+          </div> <!--bakeries-->
         </div>
         <div class="column">
           <div class="column-title">
-            <span>Player2</span>
+            <span id="player2-name">Player2</span>
           </div>
+          <div class="bakeries">
+            <div id="player2-Cursor" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Grandma" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Farm" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Factory" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Mine" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Shipment" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-AlchemyLab" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-Portal" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-TimeMachine" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player2-AntimatterCondenser" class="item player2-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+          </div> <!--bakeries-->
         </div>
         <div class="column">
           <div class="column-title">
-            <span>Player3</span>
+            <span id="player3-name">Player3</span>
           </div>
+          <div class="bakeries">
+            <div id="player3-Cursor" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Grandma" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Farm" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Factory" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Mine" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Shipment" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-AlchemyLab" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-Portal" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-TimeMachine" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+            <div id="player3-AntimatterCondenser" class="item player3-item">
+              <div class="amount">0</div>
+              <div class="bakery-sell">Sell 1</div>
+            </div>
+          </div> <!--bakeries-->
         </div>
       </div>
       </main>
