--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,17 +19,19 @@
           You bake <span id="my-cps">0.0</span> cookies per seconds.</p>
           <p><img src="img/cookie-48.png">
           You bake <span id="my-cpc">10.0</span> cookies per types.</p>
-          <ul>
-            <li>1st: id total cps</li>
-            <li>2nd: id total cps</li>
-            <li>(*Display cookie number and CpS of Multiplayer)</li>
-          </ul>
         </div>
         <div id="type-block">
           <p>Typing: <span id="typing-text"></span>
         </div>
       </div>
       <div id="action-block">
+        <div id="upgrade-column" class="column">
+          <div class="upgrade-title">
+            <span>Upgrade</span>
+          </div>
+          <div class="upgrades">
+          </div>
+        </div>
         <div id="bakery-column" class="column">
           <div class="bakery-title">
             <span>Global Store</span>
