--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ html, body { margin: 0; padding: 0; width: 100%; height: 100%;
 }
 
 h1 {
-font-size: 300%;
+font-size: 200%;
 }
 
 /* Layouts */
@@ -44,7 +44,7 @@ font-size: 300%;
 }
 
 #bakery-column {
-  width: 350px;
+  width: 150px;
 }
 
 /* DEBUG COLOR */
@@ -52,15 +52,18 @@ header {
   color: #fff;
   background-color: #111; 
 }
-footer { background-color: #fee; }
+footer {
+  background-color: #fee; 
+  font-size: 50%;
+}
 #info-block {
   color: #fff;
   background-color: #266588;
-  font-size: 200%;
+  font-size: 150%;
 }
 #type-block { 
   background-color: #fef;
-  font-size: 300%;
+  font-size: 200%;
 }
 #action-block { 
   background-color: #266588;
@@ -73,6 +76,27 @@ footer { background-color: #fee; }
 }
 .column:nth-child(2n+1) .column-title {
   background-color: #555;
+}
+
+/* upgrade */
+.upgrade-column {
+
+}
+
+.upgrade-title {
+	position: relative;
+	top: 0; bottom: 0; left: 0; right: 0;
+  background-color: #211;
+  color: #fff;
+  padding: 0 5px;
+  font-size: 100%;
+  height: 24px;
+}
+
+.upgrades {
+	position: relative;
+	top: 0; bottom: 0; left: 0; right: 0;
+	overflow: auto;
 }
 
 /* bakery module */
@@ -88,14 +112,14 @@ footer { background-color: #fee; }
   background-color: #211;
   color: #fff;
   padding: 0 5px;
-  font-size: 200%;
-  height: 40px;
+  font-size: 100%;
+  height: 24px;
 }
 .bakery-item {
   position: relative;
   color: #fff;
-  font-size: 30px;
-  height: 75px;
+  font-size: 100%;
+  height: 48px;
   cursor: pointer;
   text-shadow:0px 0px 6px #000,0px 1px 1px #000;
   padding: 2px 5px;
@@ -103,7 +127,7 @@ footer { background-color: #fee; }
 .bakery-name {
 }
 .bakery-price {
-  font-size: 20px;
+  font-size: 80%;
   font-weight: bold;
   font-family: Tahoma,Arial,sans-serif;
   color: #6f6;
@@ -112,7 +136,7 @@ footer { background-color: #fee; }
   position: absolute;
   right:12px;
   bottom: 5px;
-  font-size:40px;
+  font-size: 150%;
   opacity:0.2;
   color:#000;
   text-shadow:0px 0px 8px #fff;
@@ -148,29 +172,29 @@ footer { background-color: #fee; }
   background-color: #211;
   color: #fff;
   padding: 0 5px;
-  font-size: 200%;
-  height: 40px;
-  width: 150px;
+  font-size: 100%;
+  height: 24px;
+  width: 100px;
 }
 
 .row {
   position: relative;
-  height: 75px;
+  height: 48px;
   cursor: pointer;
   padding: 2px 5px;
 }
 
 .row-total-cookie {
-  height: 32px;
+  height: 16px;
   padding: 8px;
-  font-size: 24px;
+  font-size: 100%;
   text-align: right;
 }
 
 .row-cps {
-  height: 32px;
+  height: 16px;
   padding: 8px;
-  font-size: 24px;
+  font-size: 100%;
   text-align: right;
 }
 
@@ -187,7 +211,7 @@ footer { background-color: #fee; }
   background: rgba(240,240,240,0.1);
   margin:2px 4px 2px 0px;
   color:#333;
-  font-size:12px;
+  font-size: 80%;
   padding:4px 8px;
   text-decoration:none;
   text-shadow: 0;
@@ -229,17 +253,17 @@ footer { background-color: #fee; }
   margin-left: auto;
   margin-right: auto;
   padding: 60px 40px;
-  width: 600px;
-  height: 140px;
+  width: 400px;
+  height: 100px;
   background-color: #FFFFFF;
 }
 
 #initial-form input {
   margin-left: auto;
   margin-right: auto;
-  width: 592px;
-  height: 40px;
-  font-size: 32px;
+  width: 392px;
+  height: 32px;
+  font-size: 100%;
 
   border: 3px solid #DDD;
 }
@@ -248,9 +272,9 @@ footer { background-color: #fee; }
   margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
-  width: 600px;
-  height: 60px;
-  font-size: 32px;
+  width: 400px;
+  height: 32px;
+  font-size: 100%;
 
   background: #EEE;
   border: 3px solid #DDD;
